[handlers]: fix swagger
