# docs/swagger.json
@@ -11,6 +11,11 @@
     "paths": {
         "/actors": {
             "get": {
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
                 "description": "Retrieves a list of actors",
                 "consumes": [
                     "application/json"
@@ -38,6 +43,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
                 "description": "Updates actor information based on the input data.",
                 "consumes": [
                     "application/json"
@@ -89,6 +99,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
                 "description": "Creates a new actor",
                 "consumes": [
                     "application/json"
@@ -133,6 +148,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
                 "description": "Deletes an actor based on the provided actor ID.",
                 "tags": [
                     "Actors"
@@ -171,6 +191,11 @@
         },
         "/movies": {
             "get": {
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
                 "description": "Retrieves movies based on a filter.",
                 "tags": [
                     "Movies"
@@ -204,6 +229,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
                 "description": "Updates an existing movie",
                 "consumes": [
                     "application/json"
@@ -251,6 +281,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
                 "description": "Creates a new movie",
                 "consumes": [
                     "application/json"
@@ -288,6 +323,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
                 "description": "Deletes a movie",
                 "tags": [
                     "Movies"
@@ -323,6 +363,11 @@
         },
         "/movies/snippet": {
             "get": {
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
                 "description": "Retrieves movies based on a snippet",
                 "tags": [
                     "Movies"
@@ -515,5 +560,17 @@
                 }
             }
         }
-    }
+    },
+    "securityDefinitions": {
+        "apiKey": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    },
+    "security": [
+        {
+            "jwt": []
+        }
+    ]
 }
